--- a/client/src/pages/MainPage/heroSection/styles/matrixBackground.module.scss
+++ b/client/src/pages/MainPage/heroSection/styles/matrixBackground.module.scss
@@ -12,16 +12,18 @@
 
 
 .matrixContainer {
-    position: relative;
+    position: block;
     height: 100%;
     width: 100%;
-    
+    position: relative;
+ 
     .backgroundCanvas {
         background-color: transparent;
         position: absolute;
         top: 0;
         left: 0;
         width: 100%;
+        height: 100%;
         z-index: 1;
     }
 
